# learn-agent-framework

./: .env.example  .gitignore  README.md  README.md1  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
src/: quick-start.py
src/agents/: 01run_a_agent.py  02images.py  03multi-turn-conversation.py  03multi_turn_conversation.py  04function-tools.py  04function_tools.py  05function_tools_approvals.py  06structured_output.py  07agent_as_function_tool.py  08agent_as_mcp_tool.py
